PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Windows 8.1 support improvements
- pts-core: Add SKIP_TESTING_SUBSYSTEMS environment variable, partially based on former ONLY_TEST_TYPES
- phodevi: Improve NVIDIA DDX version detection
- phodevi: Improve audio detection
- phodevi: Add extra fallback for trying to read Radeon DRM core and memory frequencies on recent kernels

Phoronix Test Suite 5.0 Milestone 2
17 February 2014

- pts-core: Add rename-result-file option
- pts-core: WebSocket bug-fixes
- pts-core: Other bug-fixes
- pts-core: Disable the compiler-mask by default on FreeBSD/PC-BSD due to potential test installation issues on 10.0-RELEASE
- pts-core: Split webui command into gui and start-remote-gui-server (local HTML5 GUI support) commands (remote + local HTML5 GUI support)

Phoronix Test Suite 5.0 Milestone 1
6 February 2014

- pts-core: Add web-server-launcher support
- pts-core: Support starting HHVM as a web server
- pts-core: Startup speed optimizations
- pts-core: Cleaned up code error reporting/handling
- pts-core: Add server remote access and password options to user-config.xml user configuration options
- pts-core: Adjust handling of PTS OpenBenchmarking.org downloading of test profile order and hash handling
- pts-core: Reduce unnecessary communication with OpenBenchmarking.org network server
- pts-core: Support system identifier strings up to 64 characters
- pts-core: Add LIMIT_ELAPSED_TEST_TIME to limit the amount of time (in minutes) for a given Phoronix Test Suite process to complete its testing
- pts-core: Allow null descriptor strings
- pts-core: Fix regex for version string
- pts-core: Random fixes
- phodevi: Various improvements
- phodevi: Improved disk scheduler fallback reporting
- documentation: Update to point out new Git location at github.com/phoronix-test-suite/ over Phorogit
- nye_Xml: Fix for writing zeros in XML tags when using the "when not empty" function

Phoronix Test Suite 4.8.6-Sokndal